[gd_scene load_steps=10 format=3 uid="uid://b1xwk5jhrgjkd"]

[ext_resource type="Texture2D" uid="uid://bqxihjqcb0pin" path="res://Assets/Sprites/Monodialog/empty_box.png" id="1_awjgu"]
[ext_resource type="Script" uid="uid://bgjaa0e3wqec7" path="res://Scripts/Monodialog/monodialog_scene.gd" id="1_lc3tw"]
[ext_resource type="Texture2D" uid="uid://bp2vn7aimfq8m" path="res://Assets/Sprites/Monodialog/mc_dialog_view.png" id="2_lrq7w"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="3_56uhj"]
[ext_resource type="FontFile" uid="uid://qceu1igxm6sk" path="res://Assets/Fonts/Retro Pixel/thick/retro-pixel-thick.otf" id="4_naghw"]
[ext_resource type="Texture2D" uid="uid://pg174il3vwja" path="res://Assets/Textures/Buttons/x.png" id="5_01nol"]
[ext_resource type="AudioStream" uid="uid://j2c1oqo3420" path="res://Assets/Audio/SFX back_Esc.mp3" id="7_nk27u"]

[sub_resource type="LabelSettings" id="LabelSettings_lc3tw"]
font = ExtResource("4_naghw")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_01nol"]
font = ExtResource("3_56uhj")
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="MonodialogUI" type="CanvasLayer"]
script = ExtResource("1_lc3tw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -395.0
offset_top = -220.0
offset_right = -197.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(4, 4)

[node name="Panel" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_right = 196.0
offset_bottom = 48.0
texture = ExtResource("1_awjgu")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 24
patch_margin_right = 16
patch_margin_bottom = 24

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -62.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_lrq7w")
expand_mode = 1
stretch_mode = 5

[node name="CharacterName" type="Label" parent="Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -22.0
offset_right = 139.0
offset_bottom = -2.0
grow_vertical = 2
scale = Vector2(0.795, 0.795)
text = "<Main Character>"
label_settings = SubResource("LabelSettings_lc3tw")
clip_text = true

[node name="Text" type="Label" parent="Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -7.0
offset_right = 175.55557
offset_bottom = 19.041672
grow_vertical = 2
scale = Vector2(0.72, 0.72)
theme_override_font_sizes/font_size = 16
text = "apaain aisndiaosdi asidhasd as dioahsdiohais asih daisdh ioaha"
label_settings = SubResource("LabelSettings_01nol")
autowrap_mode = 3

[node name="Options" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.75
offset_top = 31.0
offset_right = 50.25
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="Control/Panel"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
offset_left = 13.0
offset_top = -20.0
offset_right = 27.0
offset_bottom = -6.0
texture_normal = ExtResource("5_01nol")
ignore_texture_size = true
stretch_mode = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CharacterVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nk27u")
bus = &"SFX"
parameters/looping = true

[connection signal="pressed" from="Control/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
